<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >


        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:text="@string/min"
                    style="@style/MyStyle5"
                />
                <EditText
                    style="@style/MyStyle5"
                    android:id="@+id/ed_min"
                    android:text="1"
                    android:inputType="number"
                    android:maxLines="3"
                    android:maxLength="3"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:text="@string/max"
                    style="@style/MyStyle5"

                    />
                <EditText
                    style="@style/MyStyle5"
                    android:id="@+id/ed_max"
                    android:inputType="number"
                    android:text="10"
                    android:maxLines="7"
                    android:maxLength="7"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:text="@string/interval"
                    style="@style/MyStyle5"
                    />
                <Spinner
                    style="@style/MyStyle5"
                    android:id="@+id/sp_kannkaku"
                    android:entries="@array/list_kannkaku"
                    android:spinnerMode="dropdown" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:text="@string/quantity"
                    style="@style/MyStyle5"
                    />
                <Spinner
                    style="@style/MyStyle5"
                    android:id="@+id/sp_kosuu"
                    android:entries="@array/list_kosuu"
                    android:spinnerMode="dropdown"

                    />

            </LinearLayout>
















        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>