<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text1"
                    android:layout_gravity="center"
                    android:textSize="100dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textMsg1"
                        android:textSize="50dp"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textMsg2"
                        android:layout_gravity="center"
                        android:textSize="50dp"
                        />
                </LinearLayout>



            </FrameLayout>





            <Button
                android:id="@+id/b_start"
                android:onClick="onClickBStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/start"
                android:textSize="50dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/ed_text1"
                android:minWidth="200dp"
                android:gravity="center"

                android:background="@color/cream"
                android:textSize="50dp"
               />

            <Button
                android:id="@+id/b_ans"
                android:onClick="onClickBAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="50dp"
                android:text="@string/ans"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >



            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickSettei"

                android:textSize="30dp"
                android:text="@string/setting_download"
                />








        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:orientation="horizontal"
            android:gravity="center"
            ></LinearLayout>

    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>